--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.larswerkman:lobsterpicker:1.0.0'
     compile 'org.adw.library:discrete-seekbar:1.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
