--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.caesar.waveloading">
 
+    <!--&lt;!&ndash; 添加快捷方式 &ndash;&gt;-->
+    <!--<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />-->
+    <!--&lt;!&ndash; 移除快捷方式 &ndash;&gt;-->
+    <!--<uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />-->
+    <!--&lt;!&ndash; 查询快捷方式 &ndash;&gt;-->
+    <!--<uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,15 +15,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".activitys.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:process=":process.main"
+            android:icon="@mipmap/ic_launcher_round" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activitys.AliasActivity"
+            android:label="@string/app_name2"
+            android:process=":process.sub"
+            android:launchMode ="singleInstance"
+            android:icon="@mipmap/chrome_logo" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
